--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   width: 300px;
   float: left;
   padding:10px;
-  background-color: lightblue;
+
 }
 .column{
   margin-left: 15%;
@@ -21,4 +21,13 @@ h1{
 }
 p.under{
   width: 300px;
+}
+.color1{
+  background-color: blue;
+}
+.color2{
+  background-color: red;
+}
+.color3{
+  background-color: green;
 }
